<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory 
		android:key="account_category" android:title="@string/prefsAccount">
		
	         
	           
	             
	    
	    <EditTextPreference android:summary="@string/PrefsUsernameDetails" android:key="username" android:title="@string/prefsUsername" android:dialogTitle="@string/prefsUsername"></EditTextPreference>
	    <EditTextPreference android:summary="@string/PrefsPasswordDetails" android:key="password" android:title="@string/prefsPassword" android:dialogTitle="@string/prefsPassword"></EditTextPreference>
</PreferenceCategory>
 
	    <PreferenceCategory
	        android:key="behaviour_category" android:title="Application preferences"><CheckBoxPreference android:summary="@string/PrefsAutoSyncDetails" android:key="autosync" android:title="@string/prefsAutoSync" android:defaultValue="false"/><ListPreference android:entries="@array/prefsCountArray" android:entryValues="@array/prefsCountArrayValues" android:summary="@string/prefsCountDetails" android:title="@string/prefsCount" android:key="listentries" android:defaultValue="100"/>
	        <ListPreference android:entries="@array/prefsMapCountArray" android:entryValues="@array/prefsMapCountArrayValues" android:key="mapcount" android:summary="@string/prefsCountDetails" android:title="@string/prefsMapCount" android:defaultValue="400"></ListPreference>
	 
	        
	 
	    </PreferenceCategory>
    
</PreferenceScreen>
