<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/sv1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" android:weightSum="1">
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/logDate"></TextView>
        <DatePicker android:id="@+id/datePicker1" android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/logTime"></TextView>
        <TimePicker android:id="@+id/timePicker1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>
        <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/logGridref"></TextView>
        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">
            <EditText android:id="@+id/editText3" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="5">
            </EditText>
            <Button android:id="@+id/button1" android:layout_height="wrap_content" android:text="@string/logGetLocation" android:layout_width="wrap_content" android:layout_weight="0"></Button>
        </LinearLayout>
        <TextView android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/logFB"></TextView>
        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editText2"></EditText>
        <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/logCondition"></TextView>
        <Spinner android:id="@+id/spinner1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:entries="@array/logConditionList"></Spinner>
        <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/logScore"></TextView>
        <RatingBar android:layout_height="wrap_content" android:id="@+id/ratingBar1" android:layout_width="wrap_content" android:max="10" style="@style/trigRatingBar" android:numStars="10" android:rating="5" android:stepSize="1"></RatingBar>
        <CheckBox android:text="@string/logFlag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/checkBox1"></CheckBox>
        <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/logComment"></TextView>
        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editText1" android:inputType="textMultiLine" android:lines="5">
        </EditText>
        
    </LinearLayout>
</ScrollView>
