<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/downloadTitle"></TextView>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="@string/downloadBlurb" android:paddingBottom="20dip"></TextView>
    <ProgressBar style="?android:attr/progressBarStyleHorizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/downloadProgress"></ProgressBar>
    <LinearLayout
        android:id="@+id/StatusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="@string/downloadStatus"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/downloadStatus" android:text="@string/downloadIdleStatus"></TextView>
    </LinearLayout>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/btnDownload" android:text="@string/btnDownload" android:layout_marginTop="10dip"></Button>
    
</LinearLayout>
