<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/downloadMapsTitle"></TextView>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:paddingBottom="20dip" android:text="@string/downloadMapsBlurb"></TextView>
    <ProgressBar style="?android:attr/progressBarStyleHorizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/downloadMapsProgress"></ProgressBar>
    <LinearLayout
        android:id="@+id/StatusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="@string/downloadStatus" android:layout_marginBottom="25dip"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/downloadIdleStatus" android:id="@+id/downloadMapsStatus"></TextView>
    </LinearLayout>
    <Spinner android:layout_height="wrap_content" android:layout_width="fill_parent" android:entries="@array/downloadMapsArray" android:id="@+id/downloadMapsTileSource"></Spinner>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btnDownload" android:layout_marginTop="10dip" android:id="@+id/btnDownloadMaps"></Button>
    
</LinearLayout>
