<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/filterRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/filterAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/filterAll" />

            <RadioButton
                android:id="@+id/filterMarked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterMarked" />

            <RadioButton
                android:id="@+id/filterNotLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterNotLogged" />

            <RadioButton
                android:id="@+id/filterLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterLogged" />

            <RadioButton
                android:id="@+id/filterUnsynced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterUnsynced" />

        </RadioGroup>

	    <Spinner
	        android:id="@+id/filterType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:entries="@array/filterTypesArray" />
        
    </LinearLayout>

</ScrollView>